welcome.lessons.welcome.array.search.MaxValue.scala.error
maxValue:5: error: reassignment to val
      m=nums(i);
       ^